Modified music disc tag

--- a/src/main/resources/data/cobblemoncustommerchants/merchants/treasure_hunter.json
+++ b/src/main/resources/data/cobblemoncustommerchants/merchants/treasure_hunter.json
@@ -38,7 +38,7 @@
     },
     {
       "input": {
-        "tag": "minecraft:creeper_drop_music_discs",
+        "tag": "c:music_discs",
         "count": 1,
         "display_name": "Music Disc"
       },
