Added some quality of life to the relic coin bag (merchants can now pull from your bag, and more precise balance is displayed. Also changed the default merchant biome/profession mixes to be more fitting

--- a/src/main/resources/data/cobblemoncustommerchants/merchants/treasure_hunter.json
+++ b/src/main/resources/data/cobblemoncustommerchants/merchants/treasure_hunter.json
@@ -1,6 +1,6 @@
 {
   "display_name": "Treasure Hunter",
-  "villager_biome": "minecraft:plains",
+  "villager_biome": "minecraft:desert",
   "villager_profession": "minecraft:cartographer",
   "trades": [
     {
